...
      <SafeAreaView>
      <View className="h-full w-full">
          {/* Bottom Bar */}
          <View className="h-[10vh]">
            <View className="flex-row gap-8 justify-center items-center mb-4 mt-2">
              <Button className=" dark:bg-secondary w-[15vw] h-[15vw]" onPress={() => { router.push("./recipeCreate")}}><Text className="text-center text-xl">Create Recipe</Text></Button>
              <Button className=" dark:bg-secondary w-[15vw] h-[15vw]" onPress={() => {deleteDB()}}><Text className="text-center text-xl">Delete All</Text></Button>
            </View>
          </View>
      </View>
    </SafeAreaView>
    )
  }
  return (
    <SafeAreaView>
      <View className="h-full w-full">
      <View>
          <Text className="text-xl text-center rounded-sm p-5 font-bold">Welcome, User</Text>
          <View className="flex flex-row gap-5">
            <Button color="green" onPress={() => router.replace("./homePage")} buttonStyle={{borderRadius:5, width: 110, marginLeft:10, marginBottom: 10 }}>homePage</Button>
          </View>
      </View>
        <VirtualizedList style={{flex:1, marginTop:50}}
        data={recipes}
        renderItem={(recipe) => <RecipeIconDisplay ID={recipe.item.id} recipeName={recipe.item.title} icon={recipe.item.icon}/>}
        keyExtractor={item => item.id}
...
