appId: com.cjbreen.Fork
---
- launchApp
- tapOn: "Register"
- tapOn: "Username"
- inputText: "MaestroTest"
- tapOn: "Email Address"
- inputText: "MaestroTest@test.com"
- tapOn: "Password"
- inputText: "MaestroTest"
- tapOn:
    text: "Register"
    index: 1
- tapOn: "Username"
- inputText: "MaestroTest"
- tapOn: "Password"
- inputText: "MaestroTest"
- tapOn:
    text: "Log In"
    index: 1
- tapOn: "Local Forks"
- tapOn: "Create Recipe"
- tapOn: "Your Recipe Name"
- inputText: "MaestroTest"
- tapOn: "Description. 30 words max!"
- "inputRandomText"
- tapOn: "Method. Use commas to separate your steps, and be concise!"
- "inputRandomText"
- tapOn:
    point: "38%,86%"
- assertVisible: "MaestroTest"
- tapOn:
    containsChild: "MaestroTest"
- tapOn:
    point: "50%,39%"
- tapOn: "MaestroTest"
- "eraseText"
- inputText: "MaestroTestEdit"
- tapOn:
    point: "38%,81%"
- tapOn: "Local Forks"
- assertVisible: "MaestroTestEdit"
- stopApp