appId: com.cjbreen.Fork
---
- launchApp: "com.cjbreen.Fork"
- tapOn: "Log In"
- tapOn: "Register Here"
- tapOn: "Username"
- inputText: "MaestroTest"
- tapOn: "Email Address"
- inputText: "MaestroTest@test.com"
- tapOn: "Password"
- inputText: "MaestroTest"
- tapOn:
    text: "Register"
    index: 1
- assertVisible:
    text: "Log In"
    index: 0
- tapOn: "Username"
- inputText: "MaestroTest"
- tapOn: "Password"
- inputText: "MaestroTest"
- tapOn:
    text: "Log In"
    index: 1
- tapOn: "OK"
- assertVisible: "Home"
- assertVisible: "Welcome, MaestroTest"